fix issue and code review.